--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.heroku.com/planilla-ventas.git"
+    "url": ""
   },
   "author": "Javier Falk",
   "license": "ISC",
